deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: circleci-demo-gitops-app
spec:
  replicas: 2
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: circleci-demo-gitops-app
  template:
    metadata:
      labels:
        app: circleci-demo-gitops-app
    spec:
      containers:
        - image: asia.gcr.io/circleci-tadashi/circleci-demo-gitops:4ee65bf
          name: circleci-demo-gitops-app
          ports:
            - containerPort: 80
