svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: circleci-demo-gitops-app
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: circleci-demo-gitops-app
