ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: circleci-demo-gitops-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: gke-demo-gitops-ip
    kubernetes.io/ingress.allow-http: "false"
    networking.gke.io/managed-certificates: circleci-demo-gitops-certificate
spec:
  rules:
    - host: gitops.gke-demo.tadashi-cci.com
      http:
        paths:
          - path: /*
            pathType: Prefix
            backend:
              service:
                name: circleci-demo-gitops-app
                port:
                  number: 80
